--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
   "author": "ff222ey@student.lnu.se and Lu222bg@student.lnu.se",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-redis": "^4.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-hbs": "^2.2.0",
+    "express-session": "^1.17.0",
+    "mongoose": "^5.9.0",
+    "mongoose-unique-validator": "^2.0.3",
+    "redis": "^3.0.2",
     "ttn": "^2.3.3"
   },
   "devDependencies": {
