--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.9.0",
     "mongoose-unique-validator": "^2.0.3",
     "redis": "^3.0.2",
+    "socket.io": "^2.3.0",
     "ttn": "^2.3.3"
   },
   "devDependencies": {
