--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0",
+    "superagent": "^5.2.2",
     "ttn": "^2.3.3"
   },
   "devDependencies": {
