--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-hbs": "^2.2.0",
     "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
     "moment": "^2.24.0",
     "mongoose": "^5.9.0",
     "mongoose-unique-validator": "^2.0.3",
